# lmpbot-beta

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  RATE_LIMIT_GUIDE.md  RAW_MODE_GUIDE.md  README.md  SCRAPER_SETUP.md  config.js  config.py  discord_token.txt.example  forgeconfig.json  index.js  main.py  package-lock.json  package.json  pnpm-lock.yaml  proxies.txt.example  pyproject.toml  requirements.txt  server_scraper.js  setup-lmpbot.sh  start.bat  supabase-schema.sql
.github/workflows/: sync-to-main.yml  verify.yml
cmds/: channel.js  chatbot_channel.js  checkglobal.old  exe.js  forums.js  guildlog.js  info.js  learnmore.js  list.old  ping.js  ready.js  send_new.js  up.js  verify.js
commands/: birthday.js  help.js  help.py  members.js  members.py  set_bot_channel.js  set_chatbot_channel.js  set_forum_channel.js  set_news_channel.js  set_verification_role.js  settings.py  welcome.js  welcome.py
events/: guildCreate.js  heartbeat.py  interactionCreate.js  messageCreate.js  on_guild_join.py  on_interaction.py  on_message.py  on_ready.py  on_thread_create.py  ready.js  threadCreate.js
funcs/: gemini.js
routes/: createserver.js  createuser.js
slash/: createserver.js  find_tags.old  help.js  members.js  set_chatbot_channel.js  set_dont_talk_channel.js  set_forum_channel.js  set_news_channel.js  set_verify_role.js  test.old  welcome.js
utils/: birthdays.js  db.js  db.py  deploy.js  gemini.js  gemini.py  heartbeat.js  memory.js
utils/backends/: mongo.js  sqlite.js  supabase.js
