[project]
name = "lmpbot"
version = "1.6.0"
description = "A useful utility bot for discord, featuring honeypots and more..!"
readme = "README.md"
requires-python = ">=3.13.10"
dependencies = [
    "aiohttp>=3.14.0",
    "aiosqlite>=0.22.1",
    "py-cord>=2.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
